--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    
+    <h1>Pick a Card</h1>
+    <button>Open a New Deck</button>
+    <button>Shuffle the Deck</button>
+    <button>Draw a Random Card</button>
 </body>
 </html>
