able to pull data and assign to variable

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 <body>
     <h1>Pick a Card</h1>
-    <button>Open a New Deck</button>
-    <button>Shuffle the Deck</button>
-    <button>Draw a Random Card</button>
+    <button id="open">Open a New Deck</button>
+    <br>
+    <button id="shuffle">Shuffle the Deck</button>
+    <br>
+    <button id="draw">Draw a Random Card</button>
 </body>
 </html>
