--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 </head>
 <body>
     <h1>Pick a Card</h1>
-    <button id="open">Open a New Deck</button>
-    <br>
-    <button id="shuffle">Shuffle the Deck</button>
-    <br>
-    <button id="draw">Draw a Random Card</button>
+
+    <p><button id="open">Open a New Deck</button></p>
+    
+    <p><button id="shuffle">Shuffle the Deck</button></p>
+    
+    <p><button id="draw">Draw a Random Card</button></p>
+
+    <img src="" id="cardPic">
+
 </body>
 </html>
