polished some of the functions and added card data to display

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     
     <p><button id="draw">Draw a Random Card</button></p>
 
+    <div id="cardStats">
+        <ul>
+            <li id="deckID"></li>
+            <li id="remainder"></li>
+        </ul>
+    </div>
+
     <img src="" id="cardPic">
 
 </body>
