added border and card back image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     
     <p><button id="draw">Draw a Random Card</button></p>
 
-    <img src="" id="cardPic">
+    <div id="cardBorder">
+    <img src="https://i.imgur.com/xHJNPD6.jpg" id="cardPic">
+    </div>
 
     <div id="cardStats">
         <ul>
