removed border, changed card back picture

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p><button id="draw">Draw a Random Card</button></p>
 
     <div id="cardBorder">
-    <img src="https://i.imgur.com/xHJNPD6.jpg" id="cardPic">
+    <img src="https://s3.amazonaws.com/images.penguinmagic.com/images/products/original/8007b.jpg" id="cardPic">
     </div>
 
     <div id="cardStats">
