--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body>
     <h1>Pick a Card</h1>
 
+    <a href="https://www.yakmagic.com/"> By David Yakubov</a>
+
     <p><button id="open">Open a New Deck</button></p>
     
     <p><button id="shuffle">Shuffle the Deck</button></p>
