--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Pick a Card</h1>
 
-    <a href="https://www.yakmagic.com/"> By David Yakubov</a>
+    <a target="_blank" href="https://www.yakmagic.com/"> By David Yakubov</a>
 
     <p><button id="open">Open a New Deck</button></p>
     
