corrected the phrasing of a button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <p><button id="shuffle">Shuffle the Deck</button></p>
     
-    <p><button id="draw">Draw a Random Card</button></p>
+    <p><button id="draw">Draw a Card</button></p>
 
     <div id="cardBorder">
     <img src="https://s3.amazonaws.com/images.penguinmagic.com/images/products/original/8007b.jpg" id="cardPic">
